--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 			crossorigin="anonymous"
 		/>
-
 		<title>Git Shcool</title>
 	</head>
 	<body>
+		<!-- header menu start -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/">Git Shcool</a>
@@ -59,10 +59,17 @@
 				</div>
 			</div>
 		</nav>
+		<!-- header menu end -->
 
-		<main>
+		<!-- main content start -->
+		<main class="py-5">
 			<div class="container"><h2>Main Content</h2></div>
 		</main>
+		<!-- main content end -->
+
+		<footer>
+			<p>All Right Reserved!</p>
+		</footer>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
