--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 		<!-- main content start -->
 		<main class="py-5">
 			<div class="container"><h2>Main Content</h2></div>
+
+			<!-- alert from office developer -->
+			<div class="alert alert-success" role="alert">Alert by Office developer.</div>
 		</main>
 		<!-- main content end -->
 
