--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="/">Home</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="/about.html">About</a>
@@ -63,10 +63,12 @@
 
 		<!-- main content start -->
 		<main class="py-5">
-			<div class="container"><h2>Main Content</h2></div>
-
-			<!-- alert from office developer -->
-			<div class="alert alert-success" role="alert">Alert by Office developer.</div>
+			<h2>About Us</h2>
+			<p>
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas fuga mollitia magnam dolores eaque
+				quibusdam modi tenetur, excepturi, ad cum obcaecati nesciunt ipsam officia! Nam quisquam voluptas omnis
+				sed facilis.
+			</p>
 		</main>
 		<!-- main content end -->
 
